# method-analysis-dashboard

./: .gitignore  Dockerfile.backup  PROJECT_SETUP_GUIDE.txt  README.md  UV_GUIDE.md  build.sh  callbacks.py  config.py  dashboard.py  data_processing.py  layout.py  plotting.py  pyproject.toml  quickstart.bat  quickstart.sh  requirements.txt  setup.py
config/: method_categories.json  method_shortnames.json  method_variants.json  topic_names_2026_01_06_reliability_resilience_power_systems.json
